# src/main/kotlin/ru/bardinpetr/itmo/web/lab4/constraints/controllers/ConstraintsController.kt
@@ -1,5 +1,8 @@
 package ru.bardinpetr.itmo.web.lab4.constraints.controllers
 
+import io.swagger.v3.oas.annotations.Operation
+import io.swagger.v3.oas.annotations.Parameter
+import io.swagger.v3.oas.annotations.media.Schema
 import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.GetMapping
 import org.springframework.web.bind.annotation.PathVariable
@@ -14,6 +17,16 @@ class ConstraintsController(
     private val conf: ConstraintsConfiguration
 ) {
     @GetMapping("/{type}")
+    @Operation(
+        summary = "Get input variables range constraints",
+        parameters = [Parameter(
+            name = "type",
+            description = "Name of requested parameter range: point X/Y or area scale R",
+            schema = Schema(
+            type="string",
+            allowableValues=["x","y","r"]
+        ))]
+    )
     fun getConstraint(@PathVariable type: String): ResponseEntity<DoubleRange> =
         ResponseEntity.ofNullable(
             when (type) {
