# src/main/kotlin/ru/bardinpetr/itmo/web/lab4/points/controller/PointController.kt
@@ -6,8 +6,7 @@ import org.springframework.security.access.annotation.Secured
 import org.springframework.validation.annotation.Validated
 import org.springframework.web.bind.annotation.*
 import org.springframework.web.server.ResponseStatusException
-import ru.bardinpetr.itmo.web.lab4.points.dto.PointCheckDTO
-import ru.bardinpetr.itmo.web.lab4.points.dto.PointCheckResultDTO
+import ru.bardinpetr.itmo.web.lab4.points.dto.PointRequestDTO
 import ru.bardinpetr.itmo.web.lab4.points.dto.PointResultDTO
 import ru.bardinpetr.itmo.web.lab4.points.repository.PointResultRepository
 import ru.bardinpetr.itmo.web.lab4.points.service.PointCheckService
@@ -23,7 +22,7 @@ class PointController(
     @GetMapping
     @Secured("ROLE_read_points")
     @Operation(summary = "Get point check results of current user")
-    fun read(auth: UserAuthentication): Iterable<PointResultDTO> =
+    fun findOwn(auth: UserAuthentication): List<PointResultDTO> =
         repo
             .getAllByOwner(auth.principal!!)
             .map(::PointResultDTO)
@@ -31,7 +30,7 @@ class PointController(
     @GetMapping("/all")
     @Secured("ROLE_read_points_all")
     @Operation(summary = "Get all point check results")
-    fun readAll(): Iterable<PointResultDTO> =
+    fun findAll(): List<PointResultDTO> =
         repo
             .findAll()
             .map(::PointResultDTO)
@@ -39,7 +38,7 @@ class PointController(
     @GetMapping("/{id}")
     @Secured("ROLE_read_points")
     @Operation(summary = "Get point result by id")
-    fun read(@PathVariable id: Long, auth: UserAuthentication): PointResultDTO =
+    fun find(@PathVariable id: Long, auth: UserAuthentication): PointResultDTO =
         repo
             .findById(id)
             .filter { it.owner.id!! == auth.principal!!.id }
@@ -48,13 +47,20 @@ class PointController(
 
     @DeleteMapping
     @Secured("ROLE_manage_points")
-    fun delete(auth: UserAuthentication) =
+    @Operation(summary = "Remove all user-owned results")
+    fun removeAll(auth: UserAuthentication) =
         repo.removeAllByOwner(auth.principal!!)
+
+    @DeleteMapping("/{id}")
+    @Secured("ROLE_manage_points")
+    @Operation(summary = "Remove user-owned result by id")
+    fun remove(@PathVariable id: Long, auth: UserAuthentication) =
+        repo.removeByOwnerAndId(auth.principal!!, id)
 
     @PostMapping
     @Secured("ROLE_create_points")
     @Operation(summary = "Check if specified point in polygon scaled by r parameter")
-    fun create(@RequestBody @Validated req: PointCheckDTO, auth: UserAuthentication): PointCheckResultDTO {
+    fun create(@RequestBody @Validated req: PointRequestDTO, auth: UserAuthentication): PointResultDTO {
         try {
             return service.check(req, auth.principal!!)
         } catch (ex: Exception) {
